--- a/emails/package.json
+++ b/emails/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
+    "mongodb": "^6.16.0",
     "nodemailer": "^6.10.1"
   }
 }
