--- a/emails/package.json
+++ b/emails/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dependencies": "^0.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
