--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "chart.js": "^4.4.9",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "googleapis": "^148.0.0",
+    "ngrok": "^5.0.0-beta.2",
     "react-chartjs-2": "^5.3.0"
   }
 }
