--- a/email-response/package.json
+++ b/email-response/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@googleapis/gmail": "^12.0.0",
     "cors": "^2.8.5",
+    "dependencies": "^0.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
