--- a/email-response/package.json
+++ b/email-response/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@googleapis/gmail": "^12.0.0",
+    "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dependencies": "^0.0.1",
     "dotenv": "^16.5.0",
